--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-{}
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_131","type":"JRE","hints":{}},"jre:jre:1.8.0"],[{"location":"C:\\Users\\gusta\\eclipse\\workspaceProgFK\\lab6","type":"PROJECT","hints":{"PROJECT_NAME":"lab6"}},"ABSENT"]]
